--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "booksapp",
-    "version": "1.0.0",
-    "description": "My Books Management app stack app",
-    "engines": {
-        "node":"16.17.1",
-        "npm":"8.15.0"
-    },
-    "scripts": {
-      "start": "node backend/server.js",
-      "client-install": "cd frontend && npm install",
-      "client": "cd frontend && npm start",
-      "server": "nodemon backend/server.js",
-      "dev": "concurrently \"npm run server\" \"npm run frontend\"",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-    },
-    "dependencies": {
-      "body-parser": "^1.19.0",
-      "concurrently": "^5.3.0",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "express": "^4.17.1",
-      "mongoose": "^5.12.7"
-    },
-    "devDependencies": {
-      "nodemon": "^2.0.7"
-    }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "engines": {
+    "node": "16.17.1",
+    "npm":"8.15.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -L server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.21",
+    "validator": "^13.9.0"
   }
-  
+}
