--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,41 +1,34 @@
 version: '3.8'
 services:
-  backend:
-    build: ./backend
-    container_name: backend_container
-    restart: always
-    ports:
-      - '7000:7000'
-    networks:
-      - mern-app
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
-    depends_on:
-      - db
-    environment:
-      - MONGODB_URI=mongodb+srv://librarian:manutd123@trial.nacabxh.mongodb.net/?retryWrites=true&w=majority
-  db:
-    container_name: mongodb_container
-    image: mongo
-    ports:
-      - '27017:27017'
-    networks:
-      - mern-app
-    volumes:
-      - mongo-data:/data/db
   frontend:
     build: ./frontend
     container_name: frontend_container
     ports:
       - '3000:3000'
-    networks:
-      - mern-app
     stdin_open: true
     tty: true
+    depends_on:
+      - backend
+    networks:
+      - mern-network
+
+  backend:
+    build: ./backend
+    container_name: backend_container
+    ports:
+      - '7000:7000'
+    depends_on:
+      - database
+    networks:
+      - mern-network
+
+  database:
+    image: mongo
+    ports:
+      - '27017:27017'
+    networks:
+      - mern-network
+    
 networks:
-  mern-app:
+  mern-network:
     driver: bridge
-volumes:
-  mongo-data:
-    driver: local
